Покрыты swagger документацией группы /auth, /info, /people
