# internal/controller/http/v1/auth.go
@@ -8,18 +8,18 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary		SignUp
-// @Tags			auth
-// @Description	create account
-// @ID				create_account
-// @Accept			json
-// @Produce		json
-// @Param		input	body		entity.Manager	true	"account info"
-// @Success		200		{integer}	integer		1
-// @Failure		400,404	{object}	errorResponse
-// @Failure		500		{object}	errorResponse
-// @Failure		default	{object}	errorResponse
-// @Router			/auth/sign-up [post]
+//	@Summary		SignUp
+//	@Tags			auth
+//	@Description	create account
+//	@ID				create_account
+//	@Accept			json
+//	@Produce		json
+//	@Param			input	body		entity.Manager	true	"account info"
+//	@Success		200		{integer}	integer			1
+//	@Failure		400,404	{object}	errorResponse
+//	@Failure		500		{object}	errorResponse
+//	@Failure		default	{object}	errorResponse
+//	@Router			/auth/sign-up [post]
 func (h *Handler) signUp(c *gin.Context) {
 
 	var input entity.Manager
@@ -45,18 +45,18 @@ type signInInput struct {
 	Password    string `json:"password" binding:"required"`
 }
 
-// @Summary		SignIn
-// @Tags			auth
-// @Description	login
-// @ID				login
-// @Accept			json
-// @Produce		json
-// @Param			input	body		signInInput	true	"credentials"
-// @Success		200		{string}	string		"token"
-// @Failure		400,404	{object}	errorResponse
-// @Failure		500		{object}	errorResponse
-// @Failure		default	{object}	errorResponse
-// @Router			/auth/sign-in [post]
+//	@Summary		SignIn
+//	@Tags			auth
+//	@Description	login
+//	@ID				login
+//	@Accept			json
+//	@Produce		json
+//	@Param			input	body		signInInput	true	"credentials"
+//	@Success		200		{string}	string		"token"
+//	@Failure		400,404	{object}	errorResponse
+//	@Failure		500		{object}	errorResponse
+//	@Failure		default	{object}	errorResponse
+//	@Router			/auth/sign-in [post]
 func (h *Handler) signIn(c *gin.Context) {
 	var input signInInput
 
